--- a/style.css
+++ b/style.css
@@ -7,9 +7,9 @@
 }
 
 .page-footer {
-    position: fixed;
+    position: relative;
     bottom: 0;
     width: 100vw;
     height: 50px;
-    margin-top: 100px;
+    margin-top: 50px;
 }
