--- a/output.css
+++ b/output.css
@@ -1,7 +1,14 @@
-#header {
-  color: #ebebeb;
+body, .button {
+  font-family: "Work Sans", sans-serif;
+}
+
+#pageName {
+  color: black;
   height: 100px;
   font-family: "Lily Script One", cursive;
+  font-size: 100px;
+  padding: 20px;
+  height: 220px;
 }
 
 .card.column.is-half {
@@ -16,17 +23,30 @@
   width: auto;
 }
 
-.title.is-4 {
-  text-align: center;
-  padding-top: 10px;
+.modal-card-body .content {
+  padding: 10px 5px 10px 5px;
 }
 
 .content {
   padding: 10px 40px 10px 40px;
 }
 
+#gifentry {
+  width: 200px;
+}
+
 #emojiContainer {
   padding-left: 40px;
+}
+
+.editbutton {
+  position: absolute;
+  right: 65px;
+}
+
+.deletebutton {
+  position: absolute;
+  right: 0px;
 }
 
 .commentTextArea {
@@ -43,6 +63,37 @@
   width: 100vw;
   height: 50px;
   margin-top: 50px;
+}
+
+.title.is-4.has-text-centered {
+  padding-top: 10px;
+  padding-left: 40px;
+}
+
+.commentTextArea {
+  position: absolute;
+  right: 10px;
+  bottom: 10px;
+}
+
+@media screen and (min-width: 769px) {
+  #mobile-menu {
+    display: none;
+  }
+}
+@media screen and (max-width: 769px) {
+  .navbar-item.has-dropdown.is-hoverable {
+    display: none;
+  }
+
+  .menu-label {
+    margin-left: 10px;
+    font-size: 1.5em;
+  }
+
+  .navbar-menu {
+    display: initial;
+  }
 }
 
 /*# sourceMappingURL=output.css.map */
