--- a/client/custom.scss
+++ b/client/custom.scss
@@ -5,18 +5,12 @@ body, .button {
   font-family: 'Work Sans', sans-serif;
 }
 
-main {
-    width: 95%;
-    margin: auto;
-    margin-top: 25px;
-}
-
 header {
     background-color: #f3f3f3;
     text-align: center;
 }
 
-header p {
+h6 {
     padding: 20px;
     text-align: center;
 }
@@ -48,17 +42,12 @@ header p {
     top: 0;
 }
 
-.card.column.is-half {
-    height: 600px;
-    margin: auto;
-    width: 49%;
-    margin-bottom: 10px;
-}
-
 .card-image {
   background-size: cover;
   max-height: 450px;
   width: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .modal-card-body .content {
@@ -141,6 +130,17 @@ header p {
   #mobile-menu {
     display: none;
   }
+  main {
+      width: 95%;
+      margin: auto;
+      margin-top: 25px;
+  }
+  .card.column.is-half {
+      height: 600px;
+      margin: auto;
+      width: 49%;
+      margin-bottom: 10px;
+  }
 }
 
 @media screen and (max-width: 769px) {
@@ -154,5 +154,11 @@ header p {
   .navbar-menu {
     display: initial;
   }
+  #pageName {
+    font-size: 65px;
+  }
+  #showModal {
+    width:120px;
+    height:auto;
+  }
 }
-
